# MetaZoo

./: README.md  pyproject.toml
metazoo/: pyproject.toml
metazoo/src/metazoo/: __init__.py
metazoo/src/metazoo/bio/evolutionary/: __init__.py  ga.py  utils.py
metazoo/src/metazoo/bio/evolutionary/operators/: crossover.py  mutation.py  selection.py
metazoo/src/metazoo/gym/: mono.py
pettingzoo/: README.md  app.py  pyproject.toml
playgrounds/: README.md  pyproject.toml
