[project]
name = "metazoo-nb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "metazoo",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "rich>=14.1.0",
]

[tool.uv.workspace]
members = [
    "metazoo",
]

[tool.uv.sources]
metazoo = { workspace = true }
