[project]
name = "pettingzoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "metazoo",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "rich>=14.1.0",
    "streamlit>=1.49.0",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
metazoo = { path = "../metazoo", editable = true }
