[project]
name = "playgrounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "rich>=14.1.0",
    "jupyter>=1.1.1",
    "metazoo",
]

[tool.uv.sources]
metazoo = { path = "../metazoo", editable = true }
